# pdf-json-mcp

./: .gitignore  app.py  config-genration.py  config_generation.py  flow.py  main.py  models.py  pdf_json_processor.py  pdf_json_rag_creation.py  pyproject.toml  requirements.txt  vectordb-schema.json  weavite.py
Todo/: Todolist.md
data/: 1.json  2.json  output.json  sample.js
output/: 2_processed.json  TEST_extraction_config.json
