[project]
name = "pdf-json-mcp"
version = "0.1.0"
description = ""
authors = [
    {name = "kosac-achyut",email = "43808123+kosac-achyut@users.noreply.github.com"},
    {name = "tathagatamukherjee044",email = "tathagatamukherjee044@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
